sample/error/top_prohibited-import_normal.bfr
// web playgroundでは禁止
open import "../lib.bfr"

codegen []